fix screen overflow

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body{
     align-items: flex-end;
     padding: 0.8rem;
     word-wrap: break-word;
+    word-break: break-all;
     
 }
 input[type=button]{
@@ -48,12 +49,6 @@ input[type=button]{
     border: 1px solid black;
     
 }
-input[type=button]:active{
-    animation: gradient 100ms;
-    background: #2E4F4F;
-    color: #fff;
-}
-
 #AC,#equals{
     grid-column: span 2;
 }
@@ -65,4 +60,9 @@ input[type=button]:active{
 }
 #AC{
     background-color: #FC2947;
+}
+input[type=button]:active{
+    animation: gradient 100ms;
+    background: #2E4F4F;
+    color: #fff;
 }
